divide signin component

--- a/client/src/pages/signup-login/signup-login.module.scss
+++ b/client/src/pages/signup-login/signup-login.module.scss
@@ -31,163 +31,11 @@
   .signup:hover {
     filter: brightness(0.9);
   }
-  .main {
-    width: 375px;
-    height: 450px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    .title__login {
-      text-align: center;
-      font-size: 26px;
-      margin: 15px 0 30px;
-      font-family: sans-serif;
-      font-weight: bold;
-    }
-    .inp {
-      margin-top: 30px;
-      .inp1 {
-        width: 100%;
-        height: 49px;
-        margin-top: 8px;
-        position: relative;
-
-        a {
-          text-transform: uppercase;
-          color: #afafaf;
-          font-weight: bold;
-          font-size: 15px;
-          letter-spacing: 0.8px;
-          position: absolute;
-          right: 15px;
-          top: 50%;
-          transform: translateY(-50%);
-        }
-        input {
-          width: 100%;
-          height: 100%;
-          background: #f7f7f7;
-          border: 2px solid #e5e5e5;
-          border-radius: 16px;
-          padding: 8px 16px;
-          outline: none;
-          &::placeholder {
-            font-size: 16px;
-            font-weight: 500;
-            color: #b3afaf;
-          }
-        }
-      }
-    }
-    .signin {
-      text-decoration: none;
-      width: 100%;
-      height: 54px;
-      border-radius: 15px;
-      text-transform: uppercase;
-      border-bottom: 4px solid #1899d6;
-      display: block;
-      line-height: 50px;
-      align-items: center;
-      text-align: center;
-      color: white;
-      font-size: 15px;
-      margin-left: auto;
-      font-weight: bold;
-      margin-top: 20px;
-      background-color: #1cb0f6;
-    }
-    .signin:hover {
-      background-color: #57c5f8;
-    }
-    .hr {
-      margin: 20px 0;
-      font-weight: bold;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      &__line {
-        border-bottom: 2px solid #e5e5e5;
-        flex: 1;
-      }
-      &__or {
-        color: #afafaf;
-        padding: 0 8px;
-        text-transform: uppercase;
-        font-size: 15px;
-        flex-grow: 0;
-      }
-    }
-    .inp3 {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 20px;
-      .fb,
-      .gg {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: solid #e5e5e5;
-        border-width: 2px 2px 4px;
-        text-align: center;
-        line-height: 46px;
-        text-transform: uppercase;
-        border-radius: 15px;
-        text-decoration: none;
-        width: 180px;
-        height: 100%;
-        font-size: 15px;
-        background-color: white;
-        font-weight: bold;
-
-        &:hover {
-          filter: brightness(0.9);
-        }
-        img {
-          width: 15px;
-          height: 15px;
-          margin-right: 10px;
-        }
-      }
-      .fb {
-        color: #3b5998;
-      }
-      .gg {
-        color: #4285f4;
-      }
-    }
-    .botton {
-      width: 100%;
-      padding: 40px 0 10px;
-      p.rule {
-        color: #afafaf;
-        font-size: 14px;
-        text-align: center;
-        text-shadow: 0 0 0.1px #afafaf;
-        line-height: 1.45;
-        a {
-          text-decoration: none;
-          color: #a09f9f;
-          font-weight: bold;
-          text-shadow: 0 0 0.1px #afafaf;
-        }
-      }
-    }
-  }
 }
 
-.signup:active,
-.signin:active,
-.fb:active,
-.gg:active {
+.signup:active {
   position: relative;
   top: 2px;
   border-width: 2px !important;
   background-color: #f7f7f7;
-}
-
-.signin:active {
-  border-width: 0 !important;
 }
