--- a/client/src/components/lesson-item/lesson-item.module.scss
+++ b/client/src/components/lesson-item/lesson-item.module.scss
@@ -75,6 +75,24 @@
             width: 35px;
           }
         }
+
+        span {
+          position: absolute;
+          bottom: -16%;
+          left: 65%;
+          width: 48px;
+          height: 44px;
+          span {
+            position: absolute;
+            color: #cd7900;
+            font-weight: 600;
+            left: 0;
+            top: 8px;
+            font-size: 15px;
+          }
+        }
+        
+        
       }
     }
     h3 {
