--- a/client/src/pages/flashcard/flashcard.module.scss
+++ b/client/src/pages/flashcard/flashcard.module.scss
@@ -97,6 +97,18 @@
             margin-right: 8px;
           }
         }
+        .clear {
+          border: 2px dashed #ffc800;
+          span {
+            color: #1cb0f6;
+          }
+        }
+        .add {
+          background: linear-gradient(to right, #12d8fa 0%, #1fa2ff 100%);
+          border: none;
+          border-bottom: 4px solid #1da4bb;
+          color: #fff;
+        }
       }
       &__store {
         display: flex;
@@ -109,13 +121,14 @@
           height: 60px;
 
           input {
-            width: 100%;
+            width: 94%;
             height: 100%;
             outline: none;
             border: none;
             background: #fff;
+            border: 2px solid #d4d4d4;
             box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-            color: #fff;
+            color: #afafaf;
             font-weight: 600;
             font-size: 17px;
             letter-spacing: 0.8px;
@@ -132,11 +145,8 @@
             &:focus,
             &:hover {
               background: rgb(28, 176, 246);
-              background: linear-gradient(
-                90deg,
-                rgba(28, 176, 246, 1) 0%,
-                rgba(59, 188, 183, 1) 100%
-              );
+              background: linear-gradient(90deg, rgba(28, 176, 246, 1) 0%, rgba(59, 188, 183, 1) 100%);
+              color: #fff;
 
               &::placeholder {
                 border-bottom: 2px solid #fff;
