--- a/client/src/admin/content/user/styleuser.scss
+++ b/client/src/admin/content/user/styleuser.scss
@@ -10,7 +10,12 @@
         th{
           border: 1px solid black;
           border-collapse: collapse;
-          padding: 5px;
+          padding: 5px 15px;
+        }
+        td{
+          border: 1px solid black;
+          border-collapse: collapse;
+          padding: 5px 15px;
         }
       }
   }
