--- a/client/src/admin/home/stylehome.scss
+++ b/client/src/admin/home/stylehome.scss
@@ -62,7 +62,7 @@ body {
     width: 1250px;
     float: left;
     margin: 15px 0 0 20px;
-    .header {
+    .headerad {
       width: 100%;
       height: 70px;
       background-color: #d7dde4;
