--- a/client/src/admin/content/theme/styletheme.scss
+++ b/client/src/admin/content/theme/styletheme.scss
@@ -4,7 +4,7 @@
     float: left;
     padding: 25px 15px;
     margin: 0;
-    .addtheme{
+    .adtheme{
       width: 60%;
       border-bottom: 1px solid #333;
       padding-bottom: 25px;
@@ -22,8 +22,22 @@
         th{
           border: 1px solid black;
           border-collapse: collapse;
-          padding: 5px;
+          padding: 5px 15px;
         }
+        td{
+          border: 1px solid black;
+          border-collapse: collapse;
+          padding: 5px 15px;
+          img{
+            width: 40px;
+            height: 40px;
+            margin: 0 15px;
+          }
+          button{
+            padding: 2px 5px;
+          }
+        }
+        
       }
     }
   }
