--- a/client/src/admin/content/vocabulary/stylevocabulary.scss
+++ b/client/src/admin/content/vocabulary/stylevocabulary.scss
@@ -10,7 +10,16 @@
         th{
           border: 1px solid black;
           border-collapse: collapse;
-          padding: 5px;
+          padding: 5px 15px;
+        }
+        td{
+          border: 1px solid black;
+          border-collapse: collapse;
+          padding: 5px 15px;
+          img{
+            width: 30px;
+            height: 30px;
+          }
         }
       }
   }
