upload_admin_lesson

--- a/client/src/admin/content/vocabulary/vocabulary.module.scss
+++ b/client/src/admin/content/vocabulary/vocabulary.module.scss
@@ -5,6 +5,7 @@
   .form {
     display: flex;
     flex-direction: column;
+
     div {
       margin: 10px 0;
       display: flex;
@@ -34,4 +35,8 @@
       }
     }
   }
+}
+
+.btn {
+  cursor: pointer;
 }
