--- a/client/src/admin/content/game/gamead.module.scss
+++ b/client/src/admin/content/game/gamead.module.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: 54px;
     border: 1px solid #ccc;
-    
+    width: 60%;
   table {
     margin-top: 15px;
     tr {
