--- a/client/src/components/lesson-item/lesson-item.module.scss
+++ b/client/src/components/lesson-item/lesson-item.module.scss
@@ -19,14 +19,14 @@
       border-radius: 50%;
       padding: 2.5px;
       background-clip: content-box;
-      animation: spin 25s linear infinite;
+      // animation: spin 25s linear infinite;
       border: 2.5px dashed #46c4ff;
       border-color: #f7797d #fed540 #78c800 #46c4ff;
     }
 
     .grid__item-img {
-      height: 106px;
-      width: 106px;
+      height: 120px;
+      width: 120px;
       border-radius: 50%;
       border: 10px solid #e5e5e5;
       border-color: #b2e4ec4a #fffdba;
@@ -53,7 +53,7 @@
       }
 
       .grid__item-img--purple {
-        background-color: #ce82ff;
+        background-color: #e2b6ff;
         border-radius: 50%;
         width: 100%;
         height: 100%;
@@ -98,6 +98,8 @@
     h3 {
       margin-top: 12px;
       font-weight: 700;
+      font-size: 20px;
+      color: #585858;
     }
   }
 }
