--- a/client/src/admin/components/choose/choose.module.scss
+++ b/client/src/admin/components/choose/choose.module.scss
@@ -3,16 +3,15 @@
     display: flex;
     align-items: center;
     height: 50px;
+    justify-content: space-between;
     padding: 0 10px;
     label {
-        width: 30%;
+        width: 27%;
     }
     input {
-        width: 50%;
         max-width: 350px;
         padding: 8px 0 8px 10px;
         outline: none;
         border: 1px dashed #afafaf;
-        margin-right: 24px;
     }
 }
