--- a/client/src/admin/home/stylehome.scss
+++ b/client/src/admin/home/stylehome.scss
@@ -11,6 +11,7 @@ body {
     height: 100vh;
     float: left;
     background-color: #3a4651;
+    position: fixed;
     .namepage {
       width: 100%;
       height: 70px;
